Updates from Overleaf

--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -158,37 +158,33 @@ Die historische Antwort auf dieses Dilemma lieferte der Offshore-Sektor: Beim \t
 
 \clearpage
 
-% \subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung}
-% \label{sec:2.2.2}
+\subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung}
+\label{sec:2.2.2}
 
-% Da der Begriff der Integrierten Projektabwicklung in Deutschland – anders als die klassischen Modelle der VOB – nicht gesetzlich definiert ist, erfordert die wissenschaftliche Einordnung eine präzise Abgrenzung anhand von branchenweit akzeptierten Merkmalen. Das \ac{GLCI} definiert IPA hierbei als ein ganzheitliches Projektabwicklungsmodell, das vertragliche, kulturelle und ökonomische Aspekte in einem kohärenten System integriert \autocite[vgl. S. 28]{haghsheno_lean_2019}.
+Das strukturelle Herzstück der IPA ist die Integrierte Projektorganisation (IPO). Im Gegensatz zur konventionellen Abwicklung, die durch bilaterale Hierarchien geprägt ist, etabliert die IPA eine projektzentrierte Organisation, in der alle Schlüsselpartner (Bauherr, Planer, Unternehmer) auf allen Hierarchieebenen vertreten sind. Diese Struktur ist im deutschen \textit{IPA-Muster-Mehrparteienvertrag} explizit als dreigliedriges System angelegt, um eine lückenlose Verknüpfung von Strategie, Management und operativer Ausführung zu gewährleisten \autocite[vgl. S. 12]{ipa_zentrum_integrierte_2022}.
 
-% Zur Veranschaulichung dieser Systematik hat sich in der deutschsprachigen Literatur das Bild des \enquote{Hauses der IPA} etabliert. Dieses Modell visualisiert das Zusammenspiel der verschiedenen Ebenen: Das \textbf{Fundament} bildet der Mehrparteienvertrag, der alle Schlüsselakteure rechtlich bindet. Die \textbf{Säulen} bestehen aus dem gemeinsamen Risikomanagement (ökonomische Anreize) und der kooperativen Zusammenarbeit (Kultur und Methoden). Das \textbf{Dach} symbolisiert schließlich die gemeinsamen Projektziele (\enquote{Best for Project}), die über den individuellen Einzelinteressen stehen \autocite[vgl. S. 29]{haghsheno_lean_2019}.
+\paragraph{Ebenen der Projektorganisation}
+Die Governance-Struktur gliedert sich klassischerweise in drei Entscheidungsebenen, die jeweils paritätisch besetzt sind:
 
-% Um die Beliebigkeit des Begriffs einzuschränken und eine klare Abgrenzung zu unverbindlichen Partnering-Modellen zu schaffen, hat das IPA-Zentrum im Jahr 2022 eine präzisere Definition erarbeitet. Diese unterscheidet zwischen wesensgebenden Charakteristika (wie einer kooperativen Grundhaltung) und harten \textbf{konstitutiven Modellbestandteilen}. Entscheidend für die wissenschaftliche Einordnung ist, dass ein Projekt erst dann dem IPA-Standard entspricht, wenn alle konstitutiven Bestandteile kumulativ vorliegen \autocite[vgl. S. 3]{ipa_zentrum_integrierte_2022}.
-
-% Für das Verständnis des späteren \textit{Target Value Designs} (TVD) sind insbesondere folgende konstitutive Elemente hervorzuheben \autocite[vgl. S. 4--9]{ipa_zentrum_integrierte_2022}:
-
-% \begin{description}
-%     \item[Mehrparteienvertrag:] Mindestens der Bauherr, die maßgeblichen Planungsbeteiligten und die schlüsselfertigen Ausführungsunternehmen schließen einen einzigen, gemeinsamen Vertrag. Dies löst die bilaterale \enquote{V-Struktur} der konventionellen Abwicklung auf und schafft eine gemeinsame Rechtsgrundlage.
+\begin{enumerate}
+    \item \textbf{Senior Management Team (SMT):} Das SMT bildet das oberste strategische Führungsorgan. Hier sind die Entscheidungsträger der Partnerorganisationen (z. B. Geschäftsführungsebene) vertreten. Die Hauptaufgabe des SMT liegt in der strategischen Steuerung, der finalen Entscheidung über Zielkostenanpassungen sowie der Konfliktlösung. Zentral ist hierbei das \textbf{Einstimmigkeitsprinzip}: Jede Entscheidung muss konsensual getroffen werden, was die Akteure zwingt, stets das Projektoptimum (\enquote{Best for Project}) vor die Einzelinteressen der Stammorganisationen zu stellen \autocite[vgl.]{haghsheno_strukturierungsansatz_2022}.
     
-%     \item[Vergütungsmodell und Risikopool:] Die Vergütung erfolgt über ein Drei-Säulen-Modell: (1) Erstattung der tatsächlichen Selbstkosten, (2) ein fixer Gemeinkostenzuschlag und (3) ein variabler Gewinnanteil. Letzterer fließt in einen gemeinsamen Risikopool. Bei Kostenüberschreitungen wird dieser Pool zur Deckung genutzt (\textit{Pain-Share}), während Unterschreitungen als Bonus an alle Partner ausgeschüttet werden (\textit{Gain-Share}) \autocite[vgl. S. 19]{becker_integrierte_2022}.
+    \item \textbf{Project Management Team (PMT):} Das PMT ist für die operative Leitung des Gesamtprojekts verantwortlich. Es besteht in der Regel aus den Projektleitern der Kernpartner. Hier werden die Vorgaben des SMT in konkrete Managementprozesse übersetzt. In Bezug auf das \textit{Target Value Design} fungiert das PMT als zentrale Schaltstelle, welche die Budgets zwischen den einzelnen Fachbereichen koordiniert und den Fortschritt der Zielkostenerreichung überwacht.
     
-%     \item[Open Book Accounting:] Diese radikale finanzielle Transparenz ist die conditio sine qua non der IPA. Alle Kostenstrukturen müssen offengelegt werden, da ohne diese Datenbasis eine gemeinsame Kostensteuerung im TVD-Prozess methodisch nicht operabel wäre.
-    
-%     \item[Einstimmigkeitsprinzip:] Entscheidungen im integrierten Führungsgremium (\textit{Senior Management Team}) müssen konsensual getroffen werden. Dies zwingt die Parteien zur sachlichen Argumentation und verhindert die im konventionellen System übliche Dominanz einzelner Akteure.
-    
-%     \item[Haftungsbeschränkung (\textit{No-Blame-Culture}):] Die Partner verzichten weitgehend auf gegenseitige Haftungsansprüche bei Fehlern (ausgenommen Vorsatz und grobe Fahrlässigkeit). Dies fördert eine offene Fehlerkultur, in der die Behebung von Defiziten Vorrang vor der Schuldzuweisung hat.
-% \end{description}
+    \item \textbf{Project Integration Teams (PIT):} Auf der operativen Ebene bilden die PITs (oft auch als \enquote{Cluster} bezeichnet) interdisziplinäre Arbeitsgruppen. Ein PIT integriert gezielt Planungs- und Ausführungsexpertise für spezifische Teilsysteme (z. B. PIT TGA, PIT Fassade). Diese Teams lösen die in Abschnitt \ref{sec:2.1.1} beschriebenen Silos auf, indem sie von Beginn an gemeinsam an technischen Lösungen arbeiten und die Verantwortung für ein Teilbudget tragen.
+\end{enumerate}
 
-% Haghsheno et al. ordnen diese vielfältigen Elemente in einem wissenschaftlichen Strukturierungsansatz drei logischen Ebenen zu, die sich gegenseitig bedingen \autocite[vgl. S. 80]{haghsheno_strukturierungsansatz_2022}:
-% \begin{enumerate}
-%     \item \textbf{Kommerzielle und rechtliche Rahmenbedingungen:} Der Mehrparteienvertrag und das Anreizsystem bilden das unverzichtbare Gerüst.
-%     \item \textbf{Organisation und Kultur:} Die integrierte Teamstruktur und das verhaltensbezogene Mindset (\enquote{Best for Project}).
-%     \item \textbf{Prozesse und Methoden:} Die operative Ebene, auf der konkrete Werkzeuge zum Einsatz kommen.
-% \end{enumerate}
+\begin{figure}[htbp]
+    \centering
+    \fcolorbox{gray!50}{white}{%
+        \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{05_figures/IPO_Struktur_SMT_PMT.jpg}%
+    }
+    \caption[Integrierte Projektorganisation (IPO)]{Struktur der Integrierten Projektorganisation mit SMT, PMT und PIT (Quelle: Eigene Darstellung in Anlehnung an IPA-Zentrum 2022).}
+    \label{fig:ipo_struktur}
+\end{figure}
 
-% Diese Systematik ist zentral für den weiteren Verlauf dieser Arbeit: Während IPA den rechtlichen und kulturellen Rahmen (Ebene 1 und 2) spannt, ist das \textbf{Target Value Design} als die entscheidende Methode auf der Prozessebene (Ebene 3) zu verorten, um die Projektziele innerhalb dieses Rahmens aktiv zu steuern.
+\paragraph{Physische Integration im \enquote{Big Room}}
+Ein wesentliches Merkmal zur Unterstützung dieser Governance ist die Arbeit im \textit{Big Room} (Co-Location). Durch das physische Zusammenrücken der Akteure in einem gemeinsamen Projektbüro werden die Kommunikationswege radikal verkürzt. Dies fördert nicht nur das gegenseitige Verständnis und Vertrauen, sondern ermöglicht die schnellen Entscheidungsprozesse, die für die iterativen Zyklen des Target Value Designs zwingend erforderlich sind. Die IPO schafft somit den organisatorischen Rahmen, um Informationsverluste an den Schnittstellen zu eliminieren und eine echte \enquote{Schicksalsgemeinschaft} zu etablieren \autocite[vgl.]{haghsheno_lean_2019}.
 
 \subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung}
 \label{sec:2.2.2}
@@ -226,12 +222,12 @@ Bevor die harten vertraglichen Bestandteile analysiert werden, müssen die acht 
 \subsubsection{Konstitutive Modellbestandteile und vertragliche Vertiefung}
 Um die Beliebigkeit des Begriffs IPA zu vermeiden, definiert das IPA-Zentrum (2022) konstitutive Bestandteile, die zwingend vorhanden sein müssen. Für das Target Value Design sind insbesondere die folgenden Elemente von substanzieller Bedeutung.
 
-\paragraph{Der Mehrparteienvertrag und der deutsche Mustervertrag}
+\minisec{Der Mehrparteienvertrag und der deutsche Mustervertrag}
 Das Herzstück der IPA ist der Mehrparteienvertrag (MPV). Im Gegensatz zur konventionellen Welt, in der der Bauherr Dutzende bilaterale Verträge schließt, unterzeichnen hier alle Schlüsselakteure (Bauherr, Architekt, Fachplaner, Hauptunternehmer) ein einziges Dokument. In Deutschland wurde hierfür durch das \textit{IPA-Zentrum} ein \textbf{IPA-Muster-Mehrparteienvertrag} veröffentlicht, der als Standard für die rechtliche Umsetzung gilt. 
 
 Dieser Vertrag ist als Projektvertrag \textit{sui generis} zu verstehen, der oft gesellschaftsrechtliche Elemente (GbR-Strukturen) nutzt, um die gesamthändische Bindung der Partner zu erzwingen. Er regelt die \textbf{Integrierte Projektorganisation (IPO)}, die sich meist in ein \textit{Senior Management Team} (SMT) für strategische Entscheidungen und ein \textit{Project Management Team} (PMT) für die operative Steuerung gliedert. Diese vertragliche Fusion verhindert, dass Informationen an Schnittstellen verloren gehen, da es keine rechtlichen \enquote{Mauern} zwischen Planung und Bau mehr gibt \autocite[vgl.]{ipa_zentrum_integrierte_2022}.
 
-\paragraph{Das Drei-Säulen-Vergütungsmodell und der Risikopool}
+\minisec{Das Drei-Säulen-Vergütungsmodell und der Risikopool}
 Die ökonomische Logik der IPA bricht mit dem klassischen Preiswettbewerb. Die Vergütung der Partner basiert auf drei Säulen \autocite[vgl.]{becker_integrierte_2022}:
 \begin{enumerate}
     \item \textbf{Selbstkostenerstattung:} Alle tatsächlich angefallenen, projektbezogenen Kosten werden dem Partner eins zu eins erstattet. Dies minimiert das existenzielle Risiko für die Unternehmen.
@@ -240,14 +236,14 @@ Die ökonomische Logik der IPA bricht mit dem klassischen Preiswettbewerb. Die V
 \end{enumerate}
 Dieser Mechanismus ist der direkte \textbf{ökonomische Enabler für TVD}: Da der eigene Gewinn nur durch die Optimierung des Gesamtprojekts gesichert werden kann, verschwindet der Anreiz für Nachträge und Claims vollständig.
 
-\paragraph{Open Book Accounting und finanzielle Transparenz}
+\minisec{Open Book Accounting und finanzielle Transparenz}
 Eng verknüpft mit der Selbstkostenerstattung ist das Prinzip des \textit{Open Book Accounting}. Jeder Partner gewährt dem Bauherrn und dem Team vollen Einblick in seine Kalkulationen, Lohnabrechnungen und Nachunternehmerverträge. Diese \enquote{gläserne Baustelle} ist für das Target Value Design unverzichtbar, da Zielkostensteuerungen nur auf Basis von Realwerten und nicht auf Basis von spekulativen Marktpreisen funktionieren können. Das Open Book schafft das notwendige Vertrauen, um Kostenverschiebungen zwischen den Gewerken (\enquote{Geld fließt dorthin, wo es den größten Nutzen bringt}) ohne Widerstände zu ermöglichen.
 
-\paragraph{Einstimmigkeitsprinzip und Governance}
+\minisec{Einstimmigkeitsprinzip und Governance}
 Entscheidungen im SMT müssen einstimmig getroffen werden. Dies mag in der Theorie nach Stillstand klingen, wirkt in der IPA jedoch als Beschleuniger. Da alle Partner durch den Gewinnpool finanziell am zügigen Projektfortschritt interessiert sind, erzwingt das Einstimmigkeitsprinzip eine hohe Qualität der Argumentation und eine schnelle Konsensfindung. Es beendet die konventionelle Praxis, bei der der Bauherr Entscheidungen einseitig trifft, deren Konsequenzen dann oft zeitverzögert als Claims auf ihn zurückfallen.
 
-\paragraph{Haftungsbeschränkung und No-Blame-Kultur}
-Ein konstitutiver Pfeiler ist der weitgehende Verzicht auf gegenseitige Haftungsansprüche (\textit{Liability Waiver}). Nach deutschem Recht (insb. § 276 BGB) kann die Haftung für Vorsatz nicht ausgeschlossen werden. Der IPA-Mustervertrag sieht jedoch vor, dass die Partner für einfache Fahrlässigkeit innerhalb des Teams nicht haften. Dies ist die Geburtsstunde einer echten \textbf{No-Blame-Kultur}. Wenn ein Planungs- oder Ausführungsfehler auftritt, liegt der Fokus sofort auf der Behebung (\enquote{What went wrong, not who is to blame}). Diese angstfreie Umgebung ist die psychologische Voraussetzung für die iterativen Optimierungsprozesse des TVD, da Fehler als Lernchancen begriffen werden, anstatt sie aus Regressangst zu verschleiern \autocite[vgl.]{ipa_zentrum_integrierte_2022}.
+\minisec{Haftungsbeschränkung und No-Blame-Kultur}
+Ein konstitutiver Pfeiler ist der weitgehende Verzicht auf gegenseitige Haftungsansprüche (\textit{Liability Waiver}). Nach deutschem Recht (insb. § 276 BGB) kann die Haftung für Vorsatz nicht ausgeschlossen werden.\autocite[vgl. S. 72]{noauthor_burgerliches_2025} Der IPA-Mustervertrag sieht jedoch vor, dass die Partner für einfache Fahrlässigkeit innerhalb des Teams nicht haften. Dies ist die Geburtsstunde einer echten \textbf{No-Blame-Kultur}. Wenn ein Planungs- oder Ausführungsfehler auftritt, liegt der Fokus sofort auf der Behebung (\enquote{What went wrong, not who is to blame}). Diese angstfreie Umgebung ist die psychologische Voraussetzung für die iterativen Optimierungsprozesse des TVD, da Fehler als Lernchancen begriffen werden, anstatt sie aus Regressangst zu verschleiern \autocite[vgl.]{ipa_zentrum_integrierte_2022}.
 
 
 Diese Einordnung ist zentral für den weiteren Verlauf dieser Arbeit: Während IPA den vertraglichen und kulturellen Rahmen (Ebene 1 und 2) spannt, ist \textbf{Target Value Design} die entscheidende Methode auf der Prozessebene (Ebene 3), um die Kostenziele innerhalb dieses Rahmens aktiv zu steuern.
@@ -255,7 +251,71 @@ Diese Einordnung ist zentral für den weiteren Verlauf dieser Arbeit: Während I
 
 
 
+\subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung}
+\label{sec:2.2.2}
 
+Die Integrierte Projektabwicklung (IPA) definiert sich nicht über eine einzelne vertragliche Klausel, sondern über ein synergetisches Zusammenspiel verschiedener Ebenen. Da der Begriff IPA in der deutschen Baupraxis nicht gesetzlich geschützt ist, ist eine klare Abgrenzung zu herkömmlichen Partnering-Modellen essenziell. Ein Projekt wird erst dann als IPA-Projekt klassifiziert, wenn die konstitutiven Merkmale kumulativ erfüllt sind.
+
+\subsubsection{Das Haus der IPA}
+Zur Systematisierung dieses Modells hat sich in der Literatur das Bild des \enquote{Hauses der IPA} etabliert. Es verdeutlicht, dass die kooperative Zusammenarbeit kein Zufallsprodukt ist, sondern auf einem stabilen Gerüst basiert \autocite[vgl. S. 29]{haghsheno_lean_2019}.
+
+\begin{figure}[htbp]
+    \centering
+    \fcolorbox{gray!50}{white}{%
+        \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{05_figures/Haus_der_IPA.jpg}%
+    }
+    \caption[Das Haus der IPA]{Das Haus der IPA zur Darstellung der systemischen Abhängigkeiten (Quelle: Eigene Darstellung in Anlehnung an Haghsheno 2019).}
+    \label{fig:haus_der_ipa}
+\end{figure}
+
+Das \textbf{Fundament} bildet der \textbf{Mehrparteienvertrag}, der die rechtliche Schicksalsgemeinschaft besiegelt. Die \textbf{Säulen} stellen die \textbf{Kultur/Organisation} (integriertes Team) und den \textbf{kommerziellen Rahmen} (Risiko-Gewinn-Pool) dar. Das \textbf{Dach} bildet die Ausrichtung auf die gemeinsamen \textbf{Projektziele} (\enquote{Best for Project}), die stets Vorrang vor Einzelinteressen haben.
+
+\subsubsection{Wesentliche Charakteristika der IPA}
+Bevor die harten strukturellen Bestandteile analysiert werden, definieren acht Charakteristika das kulturelle Leitbild der Zusammenarbeit \autocite[vgl. S. 3]{ipa_zentrum_integrierte_2022}:
+\begin{itemize}
+    \item \textbf{Projektziele vor Einzelzielen:} Fokus auf das Gesamtoptimum.
+    \item \textbf{Kollaborative Unternehmenskultur:} Vertrauen und Offenheit statt Konfrontation.
+    \item \textbf{Gemeinsame Entscheidungsfindung:} Konsensprinzip in der Governance.
+    \item \textbf{Integrierte Teamstruktur:} Einbindung aller Kernbeteiligten als Einheit.
+    \item \textbf{Gemeinsames Risiko und Gewinn:} Ökonomische Schicksalsgemeinschaft (Pain/Gain).
+    \item \textbf{Haftungsbeschränkung:} Etablierung einer No-Blame-Kultur.
+    \item \textbf{Finanzielle Transparenz:} Open Book Accounting als Vertrauensbasis.
+    \item \textbf{Kollaborative Werkzeuge:} Nutzung von BIM und Lean-Methoden.
+\end{itemize}
+
+\subsubsection{Konstitutive Modellbestandteile im Detail}
+Um die Funktionsweise von IPA für die Zielkostensteuerung (TVD) zu verstehen, müssen die operativen Bestandteile tiefgehend betrachtet werden.
+
+\paragraph{Integrierte Projektorganisation (IPO) und Governance}
+Die Organisation bricht die klassische V-Struktur (siehe \cref{sec:2.1.1}) auf und ersetzt sie durch ein dreigliedriges, paritätisch besetztes Gremiensystem, wie es auch im \textit{IPA-Muster-Mehrparteienvertrag} des IPA-Zentrums vorgesehen ist:
+\begin{enumerate}
+    \item \textbf{Senior Management Team (SMT):} Strategisches Entscheidungsorgan der Partner (Geschäftsführer-Ebene). Hier herrscht das \textbf{Einstimmigkeitsprinzip}, um die Gleichberechtigung aller Partner sicherzustellen.
+    \item \textbf{Project Management Team (PMT):} Operative Leitungsebene (Projektleiter). Es koordiniert die Fachbereiche und überwacht die Zielkostenerreichung.
+    \item \textbf{Project Integration Teams (PIT):} Interdisziplinäre Arbeitsgruppen (Cluster), in denen Planer und Ausführende gemeinsam technische Lösungen entwickeln.
+\end{enumerate}
+
+\paragraph{Frühzeitige Einbindung (ECI) und der MacLeamy-Effekt}
+Ein konstitutives Merkmal ist die Einbindung der ausführenden Unternehmen bereits in der frühen Planungsphase (LPH 2). Der wissenschaftliche Beleg für die Notwendigkeit dieses \enquote{Frontloadings} findet sich in der \textit{MacLeamy-Kurve}.
+
+\begin{figure}[htbp]
+    \centering
+    \fcolorbox{gray!50}{white}{%
+        \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{05_figures/MacLeamy_Curve.jpg}%
+    }
+    \caption[MacLeamy-Kurve]{Die MacLeamy-Kurve zur Veranschaulichung des Vorteils von \textit{Frontloading} durch ECI (Eigene Darstellung in Anlehnung an MacLeamy 2004).}
+    \label{fig:macleamycurve}
+\end{figure}
+
+Die Grafik zeigt, dass die Fähigkeit zur Kostenbeeinflussung am Anfang des Projekts am höchsten ist, während die Kosten für Änderungen später exponentiell steigen. IPA verschiebt den Entscheidungsschwerpunkt durch ECI in die frühen Phasen, um das Wissens-Vakuum (Knowledge Gap) aus der konventionellen Welt zu schließen.
+
+\paragraph{Das kommerzielle Modell und der Pain/Gain-Mechanismus}
+Das Herzstück der ökonomischen Steuerung ist das Drei-Säulen-Modell der Vergütung \autocite[vgl.]{becker_integrierte_2022}:
+\begin{itemize}
+    \item \textbf{Säule 1 (Selbstkosten):} Vollständige Erstattung der nachgewiesenen, projektbezogenen Kosten (Open Book). Dies nimmt den existenziellen Druck von den Partnern.
+    \item \textbf{Säule 2 (Fixe Gemeinkosten):} Abdeckung der administrativen Kosten über einen vereinbarten Zuschlag.
+    \item \textbf{Säule 3 (Risiko-Gewinn-Pool):} Die kalkulierten Gewinnanteile aller Partner werden in einen gemeinsamen Pool eingebracht.
+\end{itemize}
+Der \textbf{Pain/Gain-Mechanismus} ist dabei der zentrale Motivator: Unterschreiten die Ist-Kosten die Zielkosten (\textit{Target Cost}), wird der Überschuss im Pool vergrößert und am Ende als Bonus (\textit{Gain}) ausgeschüttet. Überschreiten die Kosten das Budget, wird zuerst der Gewinnanteil der Partner zur Deckung herangezogen (\textit{Pain}). Dieser Mechanismus wandelt das konventionelle Nullsummenspiel in ein kooperatives System um, da ein Partner seinen Gewinn nur sichern kann, wenn er anderen hilft, deren Kosten ebenfalls zu minimieren.
 
 
 
