--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,10 +1,76 @@
 
-@book{AIA_2007__integrated,
+@book{noauthor_burgerliches_2025,
+	edition = {Nr. 364},
+	title = {Bürgerliches {Gesetzbuch} ({BGB})},
+	shorttitle = {{BGB}},
+	publisher = {Bundesministerium der Justiz / Bundesamt für Justiz},
+	year = {2025},
+}
+
+@book{aia_integrated_2007,
 	address = {California},
 	title = {Integrated {Project} {Delivery}: {A} {Guide}},
 	publisher = {The American Institute of Architects},
 	author = {AIA},
 	year = {2007},
+}
+
+@article{page_prisma_2021,
+	title = {The {PRISMA} 2020 statement: an updated guideline for reporting systematic reviews},
+	volume = {372},
+	copyright = {© Author(s) (or their employer(s)) 2019. Re-use permitted under CC                 BY. No commercial re-use. See rights and permissions. Published by                 BMJ.. http://creativecommons.org/licenses/by/4.0/This is an Open Access article distributed in accordance with the terms of the Creative Commons Attribution (CC BY 4.0) license, which permits others to distribute, remix, adapt and build upon this work, for commercial use, provided the original work is properly cited. See: http://creativecommons.org/licenses/by/4.0/.},
+	issn = {1756-1833},
+	shorttitle = {The {PRISMA} 2020 statement},
+	url = {https://www.bmj.com/content/372/bmj.n71},
+	doi = {10.1136/bmj.n71},
+	abstract = {{\textless}p{\textgreater}The Preferred Reporting Items for Systematic reviews and Meta-Analyses (PRISMA) statement, published in 2009, was designed to help systematic reviewers transparently report why the review was done, what the authors did, and what they found. Over the past decade, advances in systematic review methodology and terminology have necessitated an update to the guideline. The PRISMA 2020 statement replaces the 2009 statement and includes new reporting guidance that reflects advances in methods to identify, select, appraise, and synthesise studies. The structure and presentation of the items have been modified to facilitate implementation. In this article, we present the PRISMA 2020 27-item checklist, an expanded checklist that details reporting recommendations for each item, the PRISMA 2020 abstract checklist, and the revised flow diagrams for original and updated reviews.{\textless}/p{\textgreater}},
+	language = {en},
+	urldate = {2025-09-28},
+	journal = {BMJ},
+	author = {Page, Matthew J. and McKenzie, Joanne E. and Bossuyt, Patrick M. and Boutron, Isabelle and Hoffmann, Tammy C. and Mulrow, Cynthia D. and Shamseer, Larissa and Tetzlaff, Jennifer M. and Akl, Elie A. and Brennan, Sue E. and Chou, Roger and Glanville, Julie and Grimshaw, Jeremy M. and Hróbjartsson, Asbjørn and Lalu, Manoj M. and Li, Tianjing and Loder, Elizabeth W. and Mayo-Wilson, Evan and McDonald, Steve and McGuinness, Luke A. and Stewart, Lesley A. and Thomas, James and Tricco, Andrea C. and Welch, Vivian A. and Whiting, Penny and Moher, David},
+	month = mar,
+	year = {2021},
+	pmid = {33782057},
+	note = {Publisher: British Medical Journal Publishing Group
+Section: Research Methods \&amp; Reporting},
+	pages = {n71},
+}
+
+@article{page_prisma_2021-1,
+	title = {{PRISMA} 2020 {Checklist}},
+	issn = {1756-1833},
+	shorttitle = {The {PRISMA} 2020 statement},
+	url = {https://www.bmj.com/lookup/doi/10.1136/bmj.n71},
+	doi = {10.1136/bmj.n71},
+	abstract = {Abstract 2 See the PRISMA 2020 for Abstracts checklist.},
+	language = {en},
+	urldate = {2025-09-28},
+	journal = {BMJ},
+	author = {Page, Matthew J and McKenzie, Joanne E and Bossuyt, Patrick M and Boutron, Isabelle and Hoffmann, Tammy C and Mulrow, Cynthia D and Shamseer, Larissa and Tetzlaff, Jennifer M and Akl, Elie A and Brennan, Sue E and Chou, Roger and Glanville, Julie and Grimshaw, Jeremy M and Hróbjartsson, Asbjørn and Lalu, Manoj M and Li, Tianjing and Loder, Elizabeth W and Mayo-Wilson, Evan and McDonald, Steve and McGuinness, Luke A and Stewart, Lesley A and Thomas, James and Tricco, Andrea C and Welch, Vivian A and Whiting, Penny and Moher, David},
+	month = mar,
+	year = {2021},
+	pages = {n71},
+}
+
+@book{bold_integrierte_2022,
+	address = {Karlsruhe},
+	title = {Integrierte {Projektabwicklung} {IPA} - {Charakteristika} und konstitutive {Modellbestandteile}},
+	publisher = {IPA Zentrum},
+	author = {Bold, Antje and Breyer, Wolfgang and Dauner-Lieb, Barbara and Haghsheno, Shervin and Lentzler, Markus and Leupertz, Stefan and Schwerdtner, ck},
+	year = {2022},
+}
+
+@article{haghsheno_strukturierungsansatz_2022,
+	title = {Strukturierungsansatz für das {Modell} der {Integrierten} {Projektabwicklung} ({IPA}},
+	volume = {97},
+	abstract = {Im Bauwesen wird bereits seit langer Zeit nach Ansätzen gesucht, die Erreichung der Projektziele für Bauherren und Nutzer von Bauwerken zu verbessern und zugleich die Qualität der Zusammenarbeit und die Produktivität für die Projektbeteiligten zu steigern. Einer dieser Ansätze sind Modelle der Integrierten Projektabwicklung (IPA), die international seit Ende der 1990er-Jahre zum Einsatz kommen und seit 2018 auch in Deutschland im Rahmen von Pilotprojekten erprobt werden. Die Autoren verfolgen mit diesem Beitrag das Ziel aus ihrer wissenschaftlichen Befassung mit diesem Projektabwicklungsmodell und ihren Erfahrungen in der Praxis einen Strukturierungsansatz für IPA zu entwickeln. Dieser Ansatz soll einen Beitrag dazu leisten, ein besseres Verständnis für die Besonderheiten dieses Modells und dessen Funktionsweise zu erlangen. Zugleich kann dies Grundlage für die Entwicklung einer Taxonomie und für die Einordnung weiterer Forschungsarbeit sein. Der hier vorgeschlagene Strukturierungsansatz wird basierend auf einer umfassenden Literaturrecherche, bereits vorhandener Strukturierungsansätze und den Erfahrungen der Autoren aus dem Dialog mit Vertretern aus Wissenschaft und Praxis erarbeitet.
+          , 
+            In the construction industry, approaches have been sought for a long time to improve the achievement of project goals for clients and users of construction works and at the same time to increase the level of collaboration and productivity for those involved in the project. One of these approaches is Integrated Project Delivery (IPD), which has been used internationally since the late 1990s and has also been tested in pilot projects in Germany since 2018. In this paper, the authors pursue the goal of developing an approach to structure IPD. This is based on their scientific engagement with this project delivery model and their experiences in practice. The approach is intended to contribute to a better understanding of the specifics of this model and how it works. At the same time it can be the basis for developing a taxonomy and for classifying further research. The approach for the structure of IPD proposed here is developed based on a comprehensive literature review, existing approaches, and the authors‘ experience from dialog with representatives from academia and practice.},
+	number = {03},
+	journal = {Bauingenieur},
+	author = {Haghsheno, Shervin and Baier, Carolin and Budau, Maximilian Rolf-Dieter and Schilling Miguel, Ana and Talmon, Philipp and Frantz, Lena},
+	year = {2022},
+	pages = {63--76},
 }
 
 @techreport{koskela_application_1992,
@@ -139,30 +205,6 @@
 	editor = {Marjanovic, D. and Storga, M. and Pavkovic, N. and Bojcetic, N.},
 	year = {2012},
 	pages = {11--22},
-}
-
-@book{seed_transforming_2015,
-	address = {Arlington, VA},
-	title = {Transforming design and construction: a framework for change},
-	isbn = {978-0-578-16842-5},
-	shorttitle = {Transforming design and construction},
-	language = {eng},
-	publisher = {Lean Construction Institute},
-	editor = {Seed, William R.},
-	year = {2015},
-	note = {OCLC: 961912818},
-}
-
-@book{seed_transforming_2015-1,
-	address = {Arlington, VA},
-	title = {Transforming design and construction: a framework for change},
-	isbn = {978-0-578-16842-5},
-	shorttitle = {Transforming design and construction},
-	language = {eng},
-	publisher = {Lean Construction Institute},
-	editor = {Seed, William R.},
-	year = {2015},
-	note = {OCLC: 961912818},
 }
 
 @misc{team_how_2019,
@@ -302,43 +344,6 @@
 	editor = {Vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
 	year = {2020},
 	doi = {10.1007/978-3-030-46781-4},
-}
-
-@article{page_2021_prismaList,
-	title = {{PRISMA} 2020 {Checklist}},
-	issn = {1756-1833},
-	shorttitle = {The {PRISMA} 2020 statement},
-	url = {https://www.bmj.com/lookup/doi/10.1136/bmj.n71},
-	doi = {10.1136/bmj.n71},
-	abstract = {Abstract 2 See the PRISMA 2020 for Abstracts checklist.},
-	language = {en},
-	urldate = {2025-09-28},
-	journal = {BMJ},
-	author = {Page, Matthew J and McKenzie, Joanne E and Bossuyt, Patrick M and Boutron, Isabelle and Hoffmann, Tammy C and Mulrow, Cynthia D and Shamseer, Larissa and Tetzlaff, Jennifer M and Akl, Elie A and Brennan, Sue E and Chou, Roger and Glanville, Julie and Grimshaw, Jeremy M and Hróbjartsson, Asbjørn and Lalu, Manoj M and Li, Tianjing and Loder, Elizabeth W and Mayo-Wilson, Evan and McDonald, Steve and McGuinness, Luke A and Stewart, Lesley A and Thomas, James and Tricco, Andrea C and Welch, Vivian A and Whiting, Penny and Moher, David},
-	month = mar,
-	year = {2021},
-	pages = {n71},
-}
-
-@article{page_2021_prisma,
-	title = {The {PRISMA} 2020 statement: an updated guideline for reporting systematic reviews},
-	volume = {372},
-	copyright = {© Author(s) (or their employer(s)) 2019. Re-use permitted under CC                 BY. No commercial re-use. See rights and permissions. Published by                 BMJ.. http://creativecommons.org/licenses/by/4.0/This is an Open Access article distributed in accordance with the terms of the Creative Commons Attribution (CC BY 4.0) license, which permits others to distribute, remix, adapt and build upon this work, for commercial use, provided the original work is properly cited. See: http://creativecommons.org/licenses/by/4.0/.},
-	issn = {1756-1833},
-	shorttitle = {The {PRISMA} 2020 statement},
-	url = {https://www.bmj.com/content/372/bmj.n71},
-	doi = {10.1136/bmj.n71},
-	abstract = {{\textless}p{\textgreater}The Preferred Reporting Items for Systematic reviews and Meta-Analyses (PRISMA) statement, published in 2009, was designed to help systematic reviewers transparently report why the review was done, what the authors did, and what they found. Over the past decade, advances in systematic review methodology and terminology have necessitated an update to the guideline. The PRISMA 2020 statement replaces the 2009 statement and includes new reporting guidance that reflects advances in methods to identify, select, appraise, and synthesise studies. The structure and presentation of the items have been modified to facilitate implementation. In this article, we present the PRISMA 2020 27-item checklist, an expanded checklist that details reporting recommendations for each item, the PRISMA 2020 abstract checklist, and the revised flow diagrams for original and updated reviews.{\textless}/p{\textgreater}},
-	language = {en},
-	urldate = {2025-09-28},
-	journal = {BMJ},
-	author = {Page, Matthew J. and McKenzie, Joanne E. and Bossuyt, Patrick M. and Boutron, Isabelle and Hoffmann, Tammy C. and Mulrow, Cynthia D. and Shamseer, Larissa and Tetzlaff, Jennifer M. and Akl, Elie A. and Brennan, Sue E. and Chou, Roger and Glanville, Julie and Grimshaw, Jeremy M. and Hróbjartsson, Asbjørn and Lalu, Manoj M. and Li, Tianjing and Loder, Elizabeth W. and Mayo-Wilson, Evan and McDonald, Steve and McGuinness, Luke A. and Stewart, Lesley A. and Thomas, James and Tricco, Andrea C. and Welch, Vivian A. and Whiting, Penny and Moher, David},
-	month = mar,
-	year = {2021},
-	pmid = {33782057},
-	note = {Publisher: British Medical Journal Publishing Group
-Section: Research Methods \&amp; Reporting},
-	pages = {n71},
 }
 
 @book{mittelstras_enzyklopaphilosophie_2024,
@@ -771,24 +776,6 @@ Section: Research Methods \&amp; Reporting},
 	editor = {Hofstadler, Christian and Motzko, Christoph},
 	year = {2023},
 	doi = {10.1007/978-3-658-43247-8},
-}
-
-@article{haghsheno_strukturierungsansatz_2022,
-	title = {Strukturierungsansatz für das {Modell} der {Integrierten} {Projektabwicklung} ({IPA})/{Structuring} approach for {Integrated} {Project} {Delivery}},
-	volume = {97},
-	issn = {0005-6650},
-	url = {https://elibrary.vdi-verlag.de/index.php?doi=10.37544/0005-6650-2022-03-47},
-	doi = {10.37544/0005-6650-2022-03-47},
-	abstract = {Im Bauwesen wird bereits seit langer Zeit nach Ansätzen gesucht, die Erreichung der Projektziele für Bauherren und Nutzer von Bauwerken zu verbessern und zugleich die Qualität der Zusammenarbeit und die Produktivität für die Projektbeteiligten zu steigern. Einer dieser Ansätze sind Modelle der Integrierten Projektabwicklung (IPA), die international seit Ende der 1990er-Jahre zum Einsatz kommen und seit 2018 auch in Deutschland im Rahmen von Pilotprojekten erprobt werden. Die Autoren verfolgen mit diesem Beitrag das Ziel aus ihrer wissenschaftlichen Befassung mit diesem Projektabwicklungsmodell und ihren Erfahrungen in der Praxis einen Strukturierungsansatz für IPA zu entwickeln. Dieser Ansatz soll einen Beitrag dazu leisten, ein besseres Verständnis für die Besonderheiten dieses Modells und dessen Funktionsweise zu erlangen. Zugleich kann dies Grundlage für die Entwicklung einer Taxonomie und für die Einordnung weiterer Forschungsarbeit sein. Der hier vorgeschlagene Strukturierungsansatz wird basierend auf einer umfassenden Literaturrecherche, bereits vorhandener Strukturierungsansätze und den Erfahrungen der Autoren aus dem Dialog mit Vertretern aus Wissenschaft und Praxis erarbeitet.
-          , 
-            In the construction industry, approaches have been sought for a long time to improve the achievement of project goals for clients and users of construction works and at the same time to increase the level of collaboration and productivity for those involved in the project. One of these approaches is Integrated Project Delivery (IPD), which has been used internationally since the late 1990s and has also been tested in pilot projects in Germany since 2018. In this paper, the authors pursue the goal of developing an approach to structure IPD. This is based on their scientific engagement with this project delivery model and their experiences in practice. The approach is intended to contribute to a better understanding of the specifics of this model and how it works. At the same time it can be the basis for developing a taxonomy and for classifying further research. The approach for the structure of IPD proposed here is developed based on a comprehensive literature review, existing approaches, and the authors‘ experience from dialog with representatives from academia and practice.},
-	language = {de},
-	number = {03},
-	urldate = {2025-05-27},
-	journal = {Bauingenieur},
-	author = {Haghsheno, Shervin and Baier, Carolin and Budau, Maximilian Rolf-Dieter and Schilling Miguel, Ana and Talmon, Philipp and Frantz, Lena},
-	year = {2022},
-	pages = {63--76},
 }
 
 @book{berner_grundlagen_2015,
