Updates from Overleaf

--- a/00_config/packages.tex
+++ b/00_config/packages.tex
@@ -96,3 +96,8 @@
 \usepackage{placeins}
 
 \usepackage{pdfpages}              % PDFs einbinden
+
+% Fußnoten manuell einfügen
+\usepackage{tablefootnote}  % Für Fußnoten in floats
+
+\usepackage{float}
