--- a/01_frontmatter/acronyms.tex
+++ b/01_frontmatter/acronyms.tex
@@ -14,7 +14,10 @@
     \acro{LCI}{Lean Construction Institute}
     \acro{HOAI}{Honorarordnung für Architekten und Ingenieure}
     \acro{PA}{Project Alliancing}
+    \acro{PIT}{Project Integration Team}
+    \acro{PMT}{Project Management Team}
     \acro{PRISMA}{Preferred Reporting Items for Systematic Reviews and Meta-Analyses}
+    \acro{SMT}{Senior Management Team}
     \acro{TVD}{Target Value Design}
     \acro{VOB}{Vergabe- und Vertragsordnung für Bauleistungen}
 \end{acronym}
